[tool.poetry]
name = "course-work-db"
version = "0.1.0"
description = ""
authors = ["Dmitry_Bezgubov <dmitrij-bezgubov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.10"
requests = "^2.32.3"
black = "^24.10.0"
flake8 = "^7.1.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
